# oxidizedRAG-1

./: .cursorrules  AGENTS.md  CLAUDE.md  README.md  flake.nix
.github/workflows/: ci.yml  nix-cache.yml
.lci/: cache.json
docs/: architecture.md
docs/archive/: README.md
examples/: complete_zero_cost_graphrag_demo.rs
graphrag-aivcs/: Cargo.toml
graphrag-aivcs/examples/: integration_demo.rs  persistence_architecture.rs
graphrag-aivcs/src/: config_hasher.rs  lib.rs  persistence.rs
graphrag-cli/src/: app.rs  config.rs  explain.rs  main.rs  theme.rs
graphrag-core/examples/: advanced_nlp_demo.rs  complete_zero_cost_graphrag_demo.rs  document_enrichment_demo.rs  embeddings_demo.rs  embeddings_from_config.rs  hierarchical_graphrag_demo.rs  llm_evaluation_demo.rs  symposium_graphrag_rs_philosophy.rs  symposium_trait_based_chunking.rs  symposium_zero_cost_query.rs  tom_sawyer_workspace.rs  workspace_demo.rs
graphrag-core/src/: async_graphrag.rs  lib.rs
graphrag-core/tests/: batch_api_contract_tests.rs  code_agent_tests.rs  common.rs  incremental_perf_test.rs  text_pipeline_fixtures.rs  vllm_integration_tests.rs
graphrag-server/src/: auth.rs  config_endpoints.rs  config_handler.rs  distributed_cache.rs  embeddings.rs  lancedb_store.rs  lib.rs  main.rs  models.rs  multi_model_embeddings.rs  observability.rs  qdrant_store.rs  validation.rs
graphrag-wasm/examples/: gpu_embeddings_demo.rs  onnx_embeddings_demo.rs  webllm-demo.rs
graphrag-wasm/src/: embedder.rs  entity_extractor.rs  gpu_embedder.rs  lib.rs  llm_provider.rs  main.rs  onnx_embedder.rs  webllm.rs  (+4 more)
(+167 files in other folders)
