[package]
name = "graphrag-aivcs"
description = "AIVCS integration for oxidizedRAG — run tracking, content-addressed config, observability"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aivcs-core.workspace = true
oxidized-state.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
